--- a/src/app/dragons/manipulate-dragon/manipulate-dragon.component.html
+++ b/src/app/dragons/manipulate-dragon/manipulate-dragon.component.html
@@ -1,3 +1,87 @@
-<p>
-    manipulate-dragon works!
-</p>
+<section class="section">
+    <div class="container">
+        <div class="columns is-multiline">
+            <div class="column is-12">
+
+                <nav class="breadcrumb has-bullet-separator is-small" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a [routerLink]="['/dragons']">Vale dos Dragões</a></li>
+                        <ng-container *ngIf="isEditMode">
+                            <li><a [routerLink]="['/dragons', dragon.slug]">{{ dragon.name }}</a></li>
+                            <li class="is-active"><a href="#" aria-current="page">Editar dragão</a></li>
+                        </ng-container>
+                        <li class="is-active" *ngIf="!isEditMode"><a href="#" aria-current="page">Criar dragão</a></li>
+                    </ul>
+                </nav>
+
+                <h2 class="title">{{ isEditMode ? 'Editar': 'Adicionar' }} dragão</h2>
+            </div>
+            <div class="column is-6">
+
+                <form *ngIf="!isLoadingData" [formGroup]="dragonForm" (ngSubmit)="submitForm()" novalidate>
+                    <div class="field">
+                        <label for="dragonName" class="label">Nome:</label>
+                        <div class="control">
+                            <input type="text" id="dragonName" class="input" placeholder="Qual o nome do dragão?" formControlName="name">
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <label for="dragonType" class="label">Tipo:</label>
+                        <div class="control">
+                            <input type="text" id="dragonType" class="input" placeholder="Qual o tipo do dragão?" formControlName="type">
+                        </div>
+                    </div>
+
+                    <div class="histories-wrapper">
+                        <div class="columns">
+                            <div class="column is-9">
+                                <h3 class="title is-5">Histórias</h3>
+                                <p class="subtitle is-6">Adicione aqui as histórias do dragão.</p>
+
+                                <div class="columns is-multiline" formArrayName="histories">
+                                    <ng-container *ngFor="let history of histories.controls; let i = index" [formGroupName]="i">
+                                        <div class="column is-10">
+                                            <div class="field">
+                                                <div class="control">
+                                                    <input type="text" class="input" placeholder="Qual o nome da história?" formControlName="history">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="column is-2">
+                                            <div class="organization__channels__btn-wrap">
+                                                <button type="button" class="button is-danger" (click)="removeHistory(i)">
+                                                    <span class="icon">
+                                                        <fa-icon icon="trash"></fa-icon>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+                                </div>
+
+                                <div class="message is-warning" *ngIf="!histories.length">
+                                    <div class="message-body">Esse dragão ainda não possui histórias :(</div>
+                                </div>
+
+                                <button type="button" class="button is-link" (click)="addHistory()">Adicionar história</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="field is-grouped is-grouped-centered">
+                        <div class="control">
+                            <button type="button" class="button" (click)="resetForm()">{{ isEditMode ? 'Resetar' : 'Limpar' }}</button>
+                        </div>
+
+                        <div class="control">
+                            <button type="submit" class="button is-primary">Enviar</button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</section>
