Refactoring the routes

--- a/src/app/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/dragons/list-dragons/list-dragons.component.html
@@ -43,7 +43,10 @@
                     <div class="message-body">
                         <div class="content">
                             <p>Suspendisse tincidunt vehicula dui ut ullamcorper. Suspendisse ut accumsan felis. Nam fermentum magna at egestas tempor.</p>
-                            <button type="button" class="button is-primary is-medium is-fullwidth" [routerLink]="['/dragons', 'new']">Cadastrar Dragão</button>
+                            <button type="button" class="button is-primary is-medium is-fullwidth" [routerLink]="['/dragons', 'new']">
+                                <span class="icon is-small"><fa-icon icon="dragon" size="xs"></fa-icon></span>
+                                <span>Cadastrar Dragão</span>
+                            </button>
                         </div>
                     </div>
                 </div>
