--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,6 @@
-$primary: #64C832
-$info: #006C43
+@import './../src/assets/styles/sass/variables'
+@import './../src/assets/styles/sass/mixins'
 
 @import bulma
+
+@import './../src/assets/styles/sass/bulma-pageloader'
