--- a/src/app/dragons/list-dragons/list-dragons.component.sass
+++ b/src/app/dragons/list-dragons/list-dragons.component.sass
@@ -1,3 +1,5 @@
+@import './../../../assets/styles/sass/mixins.sass'
+
 .dragons-list
     margin-top: 1rem
 
@@ -5,12 +7,30 @@
         > .box
             position: relative
 
-.dragon__actions
-    opacity: 0
-    position: absolute
-    right: 10px
-    top: 10px
-    transition: opacity .2s ease-in
++mediaTablet
+    .dragon
+        > .box
+            height: 100%
 
-    .dragon:hover &
-        opacity: 1
++mediaDesktop
+    .dragon__actions
+        opacity: 0
+        position: absolute
+        right: .75rem
+        top: 1.25rem
+        transition: opacity .2s ease-in
+
+        .dragon:hover &
+            opacity: 1
+
+    .dragon
+        > .box
+            padding-right: 3.5rem
+
+    .dragon__name
+        margin-bottom: 0
+
+    .dragon__btn
+        border-radius: 2px
+        font-size: .75rem
+
