--- a/src/app/dragons/manipulate-dragon/manipulate-dragon.component.sass
+++ b/src/app/dragons/manipulate-dragon/manipulate-dragon.component.sass
@@ -5,3 +5,8 @@
     margin-top: 1.5rem
     padding-bottom: 1.5rem
     padding-top: 1rem
+
+.hasSubmmited
+    &.ng-invalid,
+    & .ng-invalid
+        border-color: $red
