--- a/src/app/core/scaffolding/scaffolding.component.html
+++ b/src/app/core/scaffolding/scaffolding.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<section class="section">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</section>
