--- a/src/app/dragons/list-dragons/list-dragons.component.sass
+++ b/src/app/dragons/list-dragons/list-dragons.component.sass
@@ -1,5 +1,12 @@
 @import './../../../assets/styles/sass/mixins.sass'
 
+.page-title-wrapper
+    .level-left
+        display: flex
+
+.dragon__filter
+    min-width: 15rem
+
 .dragons-list
     margin-top: 1rem
 
