--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,3 +1,7 @@
+<div class="pageloader is-info" [class.is-active]="validatingLogin">
+    <span class="title">Carregando...</span>
+</div>
+
 <section class="hero is-fullheight is-info is-bold">
     <div class="hero-body">
         <div class="container">
