Adding some style to page not found

--- a/src/app/core/page-not-found/page-not-found.component.html
+++ b/src/app/core/page-not-found/page-not-found.component.html
@@ -1,3 +1,17 @@
-<p>
-    page-not-found works!
-</p>
+<section class="hero is-fullheight is-info is-bold">
+    <div class="hero-body">
+        <div class="container">
+
+            <h1 class="title">Ops...</h1>
+            <h2 class="subtitle">Você chegou na fronteira do Vale!</h2>
+
+            <button type="button" class="button is-info is-inverted" [routerLink]="['/dragons']">
+                <span class="icon is-small">
+                    <fa-icon icon="tree" size="sm"></fa-icon>
+                </span>
+                <span>Voltar para o Vale dos Dragões</span>
+            </button>
+
+        </div>
+    </div>
+</section>
