--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,13 +1,17 @@
 <section class="hero is-info is-bold">
     <div class="hero-body">
         <div class="container">
+
             <h1 class="title">Vale dos Dragões</h1>
             <p class="subtitle">Uma experiência Angular</p>
 
             <button type="button" class="button btn-logout is-small" (click)="logout()">
                 <span>Sair</span>
-                <span class="icon is-small"><fa-icon icon="sign-out-alt" size="sm"></fa-icon></span>
+                <span class="icon is-small">
+                    <fa-icon icon="sign-out-alt" size="sm"></fa-icon>
+                </span>
             </button>
+
         </div>
     </div>
 </section>
