--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,10 +1,11 @@
-<div class="pageloader is-info" [class.is-active]="validatingLogin">
+<div class="pageloader is-info" [class.is-active]="isValidatingLogin">
     <span class="title">Carregando...</span>
 </div>
 
 <section class="hero is-fullheight is-info is-bold">
     <div class="hero-body">
         <div class="container">
+
             <div class="columns is-tablet">
                 <div class="column is-6 is-5-widescreen is-4-fullhd">
                     <p class="subtitle is-6">Bem-vindo(a) ao,</p>
